<resources>
    <string name="app_name">Smart Farmer</string>
    <string name="_Choose_Your_Language">Choose Your Language</string>
    <string name="_English">English</string>
    <string name="_Urdu">Urdu</string>
    <string name="_Continue">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="skip">Skip</string>
    <string name="create_haali">Create Haali</string>
    <string name="name_of_haali">Name of Haali</string>
    <string name="phone_of_haali">Phone of Haali</string>
    <string name="address_of_haali">Address of Haali</string>
    <string name="allocated_area">Allocated Area</string>
    <string name="create">Create</string>
    <string name="verify">Verify</string>
    <string name="dashboard">Dashboard</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="crops">Crops</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="seeds">Seeds</string>
    <string name="diseases">Diseases</string>
    <string name="chat_with_expert">Chat with expert</string>
    <string name="calculator">Calculator</string>
    <string name="my_profile">My profile</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>


    <string-array name="str_rateType">

        <item>Select Rate</item>
        <item>Per Hour</item>
        <item>Per Day</item>


    </string-array>
</resources>