<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="13"
    tools:context=".ChooseLanguageActivity"
    android:gravity="center">

    <TextView
        android:id="@+id/lang"
        android:layout_marginVertical="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_Choose_Your_Language"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="#46eea3"
        android:layout_marginHorizontal="40dp"
        >

    </TextView>



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:rowCount="1"
        android:columnCount="2"
        android:padding="14dp"
        android:layout_marginHorizontal="10dp"
        >

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_marginBottom="16dp"
        android:layout_rowWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">



        <TextView
            android:id="@+id/lang_eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_English"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            />



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_marginBottom="16dp"
        android:layout_rowWeight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">


        <TextView
            android:id="@+id/lang_urdu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_Urdu"
            android:textColor="@color/black"
            android:layout_gravity="center"

            android:textSize="18sp"
            android:textStyle="bold"
            />


    </androidx.cardview.widget.CardView>


    </GridLayout>


    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/_Continue"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/button_lang_continue"
        >
    </Button>
</LinearLayout>