<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="260dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_clear_24"


            />

        <TextView
            android:id="@+id/textview_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/icon_cross"
            android:text="@string/skip"
            android:textSize="20sp"

            />


    </RelativeLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:text="@string/sign_up"
                android:textColor="@color/main_color_green"
                android:textSize="35sp"
                android:textStyle="bold" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/enter_your_phone_number"

                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:text="@string/sign_up"
                android:textColor="@color/black" />


        </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>